@@ -15,14 +15,14 @@ AC_PROG_CPP
 # Checks for libraries.
 
 # Checks for header files.
-AC_CHECK_HEADERS([unistd.h])
+AC_CHECK_HEADERS([string.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_STDBOOL
 AC_C_INLINE
 
 # Checks for library functions.
-AC_CHECK_FUNCS([pow sqrt strchr])
+AC_CHECK_FUNCS([pow sqrt strchr getopt])
 
 AC_CONFIG_FILES([Makefile
                  source/Makefile])
