@@ -1,3 +1,8 @@
+2019-03-19  Toshihiko Kawano  <kawano@lanl.gov>
+
+	* LICENSE: updated
+	changed from Los Alamos to Triad
+
 2019-03-18  Toshihiko Kawano  <kawano@lanl.gov>
 
 	* README (DeCE): updated
